# ai-sims

./: .gitignore  KnowledgeBase.md  README.md
game/: .gitignore  CMakeLists.txt  README.md  main.cpp
game/Assets/: CameraMove.cs  GUIAgentComplexMenu.cs  GUIAgentCreation.cs  GUIAgentInspector.cs  GameManager.cs  TimeBoxUI.cs
game/Assets/Prefabs/: Agent.prefab  AgentEntryPrefab.prefab  AgentSelector.prefab  GameManager.prefab  UI.prefab
game/Assets/Prefabs/Environment/: Campfire.prefab
game/Assets/Scenes/: 19-Dialogues.unity  21-game-map-design.unity  Dialogues.unity  MainScene.unity  SampleScene 1.unity  SampleScene.unity
game/Assets/Scenes/21-game-map-design/: NavMesh-NavMesh.asset
game/Assets/Scenes/MainScene/: NavMesh-NavMesh.asset
game/Assets/Scenes/SampleScene/: NavMesh-NavMesh 2.asset  NavMesh-Navmesh 1.asset  NavMesh-Navmesh.asset
game/Assets/Scenes/SampleScene 1/: NavMesh-NavMesh.asset
game/Assets/Scripts/: APICall.cs  Agent.cs  AgentFOV.cs  AgentManager.cs  AgentMovement.cs  Constants.cs  Enumeration.cs  GameManager.cs  RegionDetector.cs  Regions.cs  TimeManager.cs
game/Assets/Scripts/API/: APICall.cs  EventHTTPListener.cs
game/Assets/Scripts/Agent/: Agent.cs  AgentConversationHandler.cs  AgentFOV.cs  AgentMovement.cs  AgentSelectionController.cs  AgentSelector.cs
game/Assets/Scripts/BackendService/: BackendService.cs  CoroutineQueue.cs  DefaultBackendService.cs  MockBackendService.cs
game/Assets/Sprites/: Atlas.spriteatlasv2
game/Assets/Tiles/: SereveVillageRuleTile.asset
game/ProjectSettings/: ProjectSettings.asset  TagManager.asset
(+886 files in other folders)
